--- a/FontEnd/User/src/css/schedule.scss
+++ b/FontEnd/User/src/css/schedule.scss
@@ -1,57 +1,126 @@
-.schedule_box{
-    padding-top: 100px;
-    width: 1280px;
-    height: 1000px;
-    background-color: rgb(247, 247, 247);
+.schedule_page {
+  display: flex;
+  justify-content: space-around;
 }
-.schedule_box_container{
+.schedule_box {
+  margin-top: 100px;
+  padding-top: 50px;
+  width: 70%;
+  padding-bottom: 50px;
+  border-radius: 20px;
+  background-color: rgb(247, 247, 247);
+}
+.schedule_box_container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+}
+.schedule_box_right {
+  margin-top: 100px;
+  padding-top: 50px;
+  width: 25%;
+  padding-bottom: 50px;
+  border-radius: 20px;
+  background-color: rgb(247, 247, 247);
+}
+.seat_box {
+  width: 12.5%;
+  padding-left: 30px;
+  padding-right: 30px;
+  height: 90px;
+}
+.seat {
+  width: 100px;
+  height: 70px;
+  border-radius: 10px;
+  .empty {
+    background-color: #c6d57e;
+  }
+
+  .selected {
+    background-color: #f7d59c;
+  }
+  .ordered {
+    background-color: #ff7878;
+  }
+  .empty:active {
+    transform: scale(1.2);
+  }
+  .selected:active {
+    transform: scale(1.2);
+  }
+  .pending {
+    background-color: #a2cdcd;
+  }
+  div {
     width: 100%;
-    display:  flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: center;
-}
-.seat_box{
-    width: 160px;
-    padding-left: 30px;
-    padding-right: 30px;
-    height: 90px;
-}
-.seat{  
-    width: 100px;
-    height: 70px;
+    height: 100%;
     border-radius: 10px;
-    .empty{
-        background-color: #C6D57E;
-    }
-    
-    .selected{
-        background-color: #F7D59C;
-    }
-    .ordered{
-       
-        background-color: #FF7878;
-    }
-    .empty:active{
-        transform: scale(1.2);
-   
-    }
-    .selected:active{
-        transform: scale(1.2);
-   
-    }
-    .pending{
-        background-color: #A2CDCD;
-    }
-    div{
-        width: 100%;
-        height: 100%;
-        border-radius: 10px;
-        line-height:70px;
-        color:white;
-        font-weight: 700;   
-        text-align: center;
-        font-size: 2rem;
-    }
-    
+    line-height: 70px;
+    color: white;
+    font-weight: 700;
+    text-align: center;
+    font-size: 2rem;
+  }
+}
+.select_seat_btn {
+    margin-top: 20px;
+  width: 40%;
+  margin-left: 30%;
+  height: 50px;
+  border-radius: 10px;
+  line-height: 50px;
+  color: white;
+  font-weight: 700;
+  text-align: center;
+  font-size: 1.5rem;
+  background-color: #c6d57e;
+}
+.select_seat_btn:active{
+    transform: scale(.9);
+}
+.color_des {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.color_des_item {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+.color_pane {
+  margin-left: 10%;
+  width: 40%;
+  height: 50px;
+  border-radius: 10px;
+}
+.color_pane_des {
+  width: 50%;
+  height: 50px;
+  line-height: 50px;
+  color: rosybrown;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+.color1 {
+  background-color: #ff7878;
+}
+.color2 {
+  background-color: #f7d59c;
+}
+.color3 {
+  background-color: #c6d57e;
+}
+.color4 {
+  background-color: #a2cdcd;
+}
+.selected_list{
+    margin-top: 50px;
+    color: rosybrown;
+    font-weight: 700;
+    font-size: 1.4rem;
 }
