Hoan thanh giao dien nguoi dung

--- a/FontEnd/User/src/css/App.css
+++ b/FontEnd/User/src/css/App.css
@@ -27,3 +27,12 @@
 .logoutbtn{
   margin-right: 50px;
 }
+.navbar{
+  display: flex;
+  justify-content: left;
+}
+.linkhome{
+  margin-left: 40px;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
