--- a/FontEnd/User/src/css/schedule.scss
+++ b/FontEnd/User/src/css/schedule.scss
@@ -124,3 +124,43 @@
     font-weight: 700;
     font-size: 1.4rem;
 }
+.Alert{
+  width: 100%;
+  .Alert_content{
+    width: 100%;
+  height: 50px;
+  line-height: 50px;
+  color: rosybrown;
+  font-weight: 700;
+  font-size: 1.2rem;
+  }
+}
+.Err_content{
+  width: 100%;
+height: 50px;
+line-height: 50px;
+color: rgb(207, 46, 46);
+font-weight: 700;
+font-size: 1.2rem;
+}
+.AlertPanel{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  padding-left:10% ;
+  padding-right: 10%;
+}
+.confirm_seat_btn {
+  margin-top: 20px;
+width: 40%;
+height: 50px;
+border-radius: 10px;
+line-height: 50px;
+color: white;
+font-weight: 700;
+text-align: center;
+font-size: 1.5rem;
+}
+.confirm_seat_btn:active{
+  transform: scale(.9);
+}
