--- a/FontEnd/User/src/css/home.scss
+++ b/FontEnd/User/src/css/home.scss
@@ -32,6 +32,8 @@
 }
 .poster_box {
     margin-top: 20px;
+    width: 200px;
+    height: 300px;
   margin-left: 10px;
   margin-right: 10px;
   img {
